# middleware

./: .gitignore  README.md
imgnormalize/: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_utils.c  benchmark_utils.h  distsys_image.c  distsys_image.h  imageio.c  imageio.h  imageio_ppm.c  imageio_ppm.h  imgnormalize.c  imgnormalize.cc  imgnormalize_core.c  imgnormalize_core.h  imgutils.cc  imgutils.h  rgb2hsv.c  rgb2hsv.h
imgnormalize/data/: parse.sh  plot.r  runs_MPI_2thread.txt  runs_MPI_8thread.txt  runs_omp_2thread.txt  runs_omp_4thread.txt  script.sh
imgnormalize/data/earth-huge/: runs_MPI_1thread.txt  runs_MPI_1thread.txt.parsed  runs_MPI_2thread.txt  runs_MPI_2thread.txt.parsed  runs_MPI_4thread.txt  runs_MPI_4thread.txt.parsed  runs_MPI_8thread.txt  runs_MPI_8thread.txt.parsed  runs_omp_1thread.txt  runs_omp_1thread.txt.parsed  runs_omp_2thread.txt  runs_omp_2thread.txt.parsed  runs_omp_4thread.txt  runs_omp_4thread.txt.parsed  runs_omp_8thread.txt  runs_omp_8thread.txt.parsed
imgnormalize/data/earth-huge-pgm/: runs_MPI_1thread.txt  runs_MPI_2thread.txt  runs_MPI_4thread.txt  runs_MPI_8thread.txt  runs_omp_1thread.txt  runs_omp_2thread.txt  runs_omp_4thread.txt  runs_omp_8thread.txt
imgnormalize/data/hugepanorama1/: plot.r  runs_MPI_1thread.txt  runs_MPI_1thread.txt.parsed  runs_MPI_2thread.txt  runs_MPI_2thread.txt.parsed  runs_MPI_4thread.txt  runs_MPI_4thread.txt.parsed  runs_MPI_8thread.txt  runs_MPI_8thread.txt.parsed  runs_omp_1thread.txt  runs_omp_1thread.txt.parsed  runs_omp_2thread.txt  runs_omp_2thread.txt.parsed  runs_omp_4thread.txt  (+3 more)
(+188 files in other folders)
